Second text updated

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <a href="#" class="logo-heading">
                         <img src="images/Evermind_AI.png" alt="EverMind AI Logo" />
                     </a>
-                    <p class="major" style="color: #191638; font-style:italic;">Ensuring that every mind is seen, valued, and supported.</p>
+                    <p class="major" style="color: #191638; font-style:italic; font-style:bold;">Ensuring that every mind is seen, valued, and supported.</p>
                     <p>Evermind AI harnesses smart game AI technology to transform neurodivergence identification and support. Our mission is to help every child thrive in a society that recognises and meets their needs. Our flagship iPad-based games analyse motor patterns linked to autistic and ADHD traits, offering meaningful insights to guide support. Funded by Innovate UK, we are now piloting this solution across UK schools to help teachers understand learner diversity and give every child the best possible educational experience.</p>
                     <ul class="actions stacked">
                         <li><a href="#first" class="button large wide smooth-scroll-middle">Learn More</a></li>
@@ -38,8 +38,8 @@
             
             <section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
                 <div class="content">
-                    <h2>Our Technology</h2>
-                    <p>We've developed a novel digital screening tool for neurodivergence, specifically autism, through an interactive iPad game. This game captures precise user movement data, which is then securely transmitted to our cloud-based AI system for sophisticated analysis. This allows us to identify subtle motor patterns indicative of neurodivergence with a high degree of accuracy and reliability.</p>
+                    <h2>Neurodiversity Assessment</h2>
+                    <p>Our smart assessment feels like simple, enjoyable play on an iPad. Children draw shapes, colour them in, and share food between friendly cartoon characters — games that take around fifteen minutes and require no special expertise from the examiner. Beneath this playful surface, advanced AI analyses how each child moves and interacts with the screen, revealing subtle motor patterns that reflect their unique way of processing information. This natural and non-judgmental approach is designed to let every child show how their mind works while having fun.</p>
                     <ul class="actions stacked">
                         <li><a href="#validated" class="button large wide smooth-scroll-middle">How was it developed?</a></li>
                     </ul>
