--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
                 <div class="content">
                     <h2>Neurodiversity Assessment</h2>
-                    <p>Our smart assessment feels like simple, enjoyable play on an iPad. Children draw shapes, colour them in, and share food between friendly cartoon characters — games that take around fifteen minutes and require no special expertise from the examiner. Beneath this playful surface, advanced AI analyses how each child moves and interacts with the screen, revealing subtle motor patterns that reflect their unique way of processing information. This natural and non-judgmental approach is designed to let every child show how their mind works while having fun.</p>
+                    <p>Our smart assessment feels like simple, enjoyable play on an iPad. Children draw shapes, colour them in, and share food between friendly cartoon characters — games that take around fifteen minutes and require no special expertise from the examiner. Beneath this playful surface, advanced AI analyses how each child moves and interacts with the screen, revealing subtle motor patterns that reflect their unique way of processing information and interacting with the environment. This natural and non-judgmental approach is designed to let every child show how their mind works while having fun.</p>
                     <ul class="actions stacked">
                         <li><a href="#validated" class="button large wide smooth-scroll-middle">How was it developed?</a></li>
                     </ul>
