From Lab to Practice section updated

--- a/index.html
+++ b/index.html
@@ -41,18 +41,18 @@
                     <h2>Neurodiversity Assessment</h2>
                     <p>Our smart assessment feels like simple, enjoyable play on an iPad. Children draw shapes, colour them in, and share food between friendly cartoon characters — games that take around fifteen minutes and require no special expertise from the examiner. Beneath this playful surface, advanced AI analyses how each child moves and interacts with the screen, revealing subtle motor patterns that reflect their unique way of processing information and interacting with the environment. This natural and non-judgmental approach is designed to let every child show how their mind works while having fun.</p>
                     <ul class="actions stacked">
-                        <li><a href="#validated" class="button large wide smooth-scroll-middle">How was it developed?</a></li>
+                        <li><a href="#validated" class="button large wide smooth-scroll-middle">The story behind</a></li>
                     </ul>
                 </div>
                 <div class="image">
-                    <img src="images/spotlight01.webp" alt="A depiction of data analysis and AI models." />
+                    <img src="images/spotlight01.webp" alt="Tablet game where a child shares food between the characters." />
                 </div>
             </section>
             
             <section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in" id="validated">
                 <div class="content">
-                    <h2>Validated and Reliable</h2>
-                    <p>Our solution is built upon years of rigorous, evidence-based research and development by researchers at Strathclyde University. The AI algorithms have already demonstrated reliable diagnostic performance in a multi-site Phase 3 clinical trial. This high-quality, ethically sourced data forms the bedrock of our diagnostic accuracy and sets us apart from competitors.</p>
+                    <h2>From Lab to Practice</h2>
+                    <p>The technology was developed at the University of Strathclyde’s <a href="https://www.strath.ac.uk/research/innovationinautism/">Laboratory for Innovation in Autism</a>, led by Prof Jonathan Delafield-Butt. Built on more than a decade of research and £3 million in funding, our algorithms were trained on data from over 1,200 children and validated in a multicentre Phase 3 study on autism identification across Scotland and Sweden, using previously unseen datasets. This high-quality, ethically sourced evidence base underpins the reliability of our results and distinguishes Evermind AI from competitors.</p>
                     <ul class="actions stacked">
                         <li><a href="#impact" class="button large wide smooth-scroll-middle">What do we want?</a></li>
                     </ul>
