The Road Ahead section updated

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     <h2>From Lab to Practice</h2>
                     <p>The technology was developed at the University of Strathclyde’s <a href="https://www.strath.ac.uk/research/innovationinautism/">Laboratory for Innovation in Autism</a>, led by Prof Jonathan Delafield-Butt. Built on more than a decade of research and £3 million in funding, our algorithms were trained on data from over 1,200 children and validated in a multicentre Phase 3 study on autism identification across Scotland and Sweden, using previously unseen datasets. This high-quality, ethically sourced evidence base underpins the reliability of our results and distinguishes Evermind AI from competitors.</p>
                     <ul class="actions stacked">
-                        <li><a href="#impact" class="button large wide smooth-scroll-middle">What do we want?</a></li>
+                        <li><a href="#impact" class="button large wide smooth-scroll-middle">Get involved</a></li>
                     </ul>
                 </div>
                 <div class="image">
@@ -64,8 +64,8 @@
             
             <section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="impact">
                 <div class="content">
-                    <h2>Wider Impact</h2>
-                    <p>Our project aims to deliver significant benefits beyond our company. By facilitating early identification, we enable timely access to support for children and families. This tool also empowers educators to become a more effective first line of identification, reducing pressure on NHS diagnostic services and promoting a more inclusive, preventative approach to public mental health.</p>
+                    <h2>The Road Ahead</h2>
+                    <p>We are now running the pilot feasibility study in UK education, funded by Innovate UK. Schools and nurseries are invited to collaborate in exploring how early insights into neurodiversity can enrich learning and inclusion. We are also seeking business and organisational partners who share our commitment to ethical, evidence-based innovation in neurodiversity and child development. Together, we can lay the foundations for a future where every child’s individuality is recognised and supported.</p>
                 </div>
                 <div class="image">
                     <img src="images/spotlight03.webp" alt="An image illustrating a positive impact on a community." />
