Icons in the footer updates

--- a/index.html
+++ b/index.html
@@ -74,28 +74,22 @@
             
             <section class="wrapper style1 align-center">
                 <div class="inner">
-                    <h2>Key Deliverables</h2>
-                    <p>This project is designed to deliver a set of tangible, innovative outputs that will directly address the critical market need for early neurodivergence identification.</p>
+                    <h2>Shaping the Future</h2>
                     <div class="items style1 medium onscroll-fade-in">
                         <section>
-                            <span class="icon solid style2 major fa-mobile"></span>
-                            <h3>Market-Ready iPad Game</h3>
-                            <p>A child-friendly and engaging iPad game application, refined based on user feedback from UK school pilots, with on-device data pre-processing capabilities.</p>
-                        </section>
-                        <section>
-                            <span class="icon solid style2 major fa-cloud"></span>
-                            <h3>Robust Cloud-Based AI</h3>
-                            <p>A secure, GDPR-compliant cloud infrastructure with advanced AI models for the analysis of movement data to accurately identify neurodivergent traits.</p>
-                        </section>
-                        <section>
-                            <span class="icon solid style2 major fa-chart-line"></span>
-                            <h3>Go-to-Market Strategy</h3>
-                            <p>A comprehensive go-to-market strategy and commercial model, informed by our feasibility study and market consultancy services.</p>
-                        </section>
-                        <section>
                             <span class="icon solid style2 major fa-graduation-cap"></span>
-                            <h3>Support Pathway</h3>
-                            <p>The establishment of a practical pathway for early support and referral to NHS services for children identified as likely neurodivergent.</p>
+                            <h3>Personalised Education</h3>
+                            <p>Supports teachers in tailoring learning to each child’s neurodiversity profile, promoting inclusion and better classroom outcomes.</p>
+                        </section>                        
+                        <section>
+                            <span class="icon solid style2 major fa-hand-holding-medical"></i>"></span>
+                            <h3>Preventive Healthcare</h3>
+                            <p>Enables early detection of neurodevelopmental differences, improving referral pathways and mental health outcomes.</p>
+                        </section>
+                        <section>
+                            <span class="icon solid style2 major fa-brain"></span>
+                            <h3>Digital Games for Growth</h3>
+                            <p>Brings developmental insight into digital games, turning play into a tool for understanding and supporting each child’s growth.</p>
                         </section>
                     </div>
                 </div>
