Company info updated.

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             
             <section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="impact">
                 <div class="content">
-                    <h2>The Road Ahead</h2>
+                    <h2>Collaborate for Change</h2>
                     <p>We are now running the pilot feasibility study in UK education, funded by Innovate UK. Schools and nurseries are invited to collaborate in exploring how early insights into neurodiversity can enrich learning and inclusion. We are also seeking business and organisational partners who share our commitment to ethical, evidence-based innovation in neurodiversity and child development. Together, we can lay the foundations for a future where every child’s individuality is recognised and supported.</p>
                 </div>
                 <div class="image">
@@ -100,7 +100,7 @@
                     <ul class="icons">
                         <li><a href="mailto:info@evermindai.co?subject=Inquiry%20from%20Website" class="icon style2 fa-envelope"><span class="label">Email</span></a></li>
                     </ul>
-                    <p>&copy; EverMind AI. All rights reserved.</p>
+                    <p>&copy; © 2025 EverMind AI Ltd. All rights reserved. Registered in Scotland No. SC847182. 40 George Street, Glasgow, UK, G1 1QE.</p>
                 </div>
             </footer>
         </div>
