--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                         </section>
                         <section>
                             <span class="icon solid style2 major fa-brain"></span>
-                            <h3>Digital Games for Growth</h3>
+                            <h3>Smart Digital Games</h3>
                             <p>Brings developmental insight into digital games, turning play into a tool for understanding and supporting each child’s growth.</p>
                         </section>
                     </div>
