--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <a href="#" class="logo-heading">
                         <img src="images/Evermind_AI.png" alt="EverMind AI Logo" />
                     </a>
-                    <p class="major" style="color: #191638; font-style:italic; font-style:bold;">Ensuring that every mind is seen, valued, and supported.</p>
+                    <p class="major" style="color: #191638; font-style:italic; font-weight:bold;">Ensuring that every mind is seen, valued, and supported.</p>
                     <p>Evermind AI harnesses smart game AI technology to transform neurodivergence identification and support. Our mission is to help every child thrive in a society that recognises and meets their needs. Our flagship iPad-based games analyse motor patterns linked to autistic and ADHD traits, offering meaningful insights to guide support. Funded by Innovate UK, we are now piloting this solution across UK schools to help teachers understand learner diversity and give every child the best possible educational experience.</p>
                     <ul class="actions stacked">
                         <li><a href="#first" class="button large wide smooth-scroll-middle">Learn More</a></li>
