Email made visible (for Apple)

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                             <p>Supports teachers in tailoring learning to each child’s neurodiversity profile, promoting inclusion and better classroom outcomes.</p>
                         </section>                        
                         <section>
-                            <span class="icon solid style2 major fa-hand-holding-medical"></i>"></span>
+                            <span class="icon solid style2 major fa-hand-holding-medical"></span>
                             <h3>Preventive Healthcare</h3>
                             <p>Enables early detection of neurodevelopmental differences, improving referral pathways and mental health outcomes.</p>
                         </section>
@@ -100,7 +100,9 @@
                     <ul class="icons">
                         <li><a href="mailto:info@evermindai.co?subject=Inquiry%20from%20Website" class="icon style2 fa-envelope"><span class="label">Email</span></a></li>
                     </ul>
-                    <p>&copy; © 2025 EverMind AI Ltd. All rights reserved. Registered in Scotland No. SC847182. 40 George Street, Glasgow, UK, G1 1QE.</p>
+                    <p>&copy; © 2025 EverMind AI Ltd. All rights reserved.</p>
+                    <p>Registered in Scotland No. SC847182. 40 George Street, Glasgow, UK, G1 1QE.</p>
+                    <p><a href="mailto:info@evermindai.co">info@evermindai.co</a></p>
                 </div>
             </footer>
         </div>
