--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                     <ul class="icons">
                         <li><a href="mailto:info@evermindai.co?subject=Inquiry%20from%20Website" class="icon style2 fa-envelope"><span class="label">Email</span></a></li>
                     </ul>
-                    <p>&copy; © 2025 EverMind AI Ltd. All rights reserved.<br>
+                    <p>&copy; 2025 EverMind AI Ltd. All rights reserved.<br>
                     Registered in Scotland No. SC847182. 40 George Street, Glasgow, UK, G1 1QE.<br>
                     <a href="mailto:info@evermindai.co">info@evermindai.co</a></p>
                 </div>
