Last button added

--- a/index.html
+++ b/index.html
@@ -66,13 +66,16 @@
                 <div class="content">
                     <h2>Collaborate for Change</h2>
                     <p>We are now running the pilot feasibility study in UK education, funded by Innovate UK. Schools and nurseries are invited to collaborate in exploring how early insights into neurodiversity can enrich learning and inclusion. We are also seeking business and organisational partners who share our commitment to ethical, evidence-based innovation in neurodiversity and child development. Together, we can lay the foundations for a future where every child’s individuality is recognised and supported.</p>
+                     <ul class="actions stacked">
+                        <li><a href="#future" class="button large wide smooth-scroll-middle">What's next</a></li>
+                    </ul>
                 </div>
                 <div class="image">
                     <img src="images/spotlight03.webp" alt="An image illustrating a positive impact on a community." />
                 </div>
             </section>
             
-            <section class="wrapper style1 align-center">
+            <section class="wrapper style1 align-center" id="future">
                 <div class="inner">
                     <h2>Shaping the Future</h2>
                     <div class="items style1 medium onscroll-fade-in">
