--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
     <head>
-        <title>EverMind AI - Innovation in Neurodivergence</title>
+        <title>EverMind AI</title>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
         <link rel="stylesheet" href="assets/css/main.css" />
@@ -77,7 +77,7 @@
             
             <section class="wrapper style1 align-center" id="future">
                 <div class="inner">
-                    <h2>Shaping the Future</h2>
+                    <h2>Shape the Future</h2>
                     <div class="items style1 medium onscroll-fade-in">
                         <section>
                             <span class="icon solid style2 major fa-graduation-cap"></span>
