--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in" id="validated">
                 <div class="content">
                     <h2>From Lab to Practice</h2>
-                    <p>The technology was developed at the University of Strathclyde’s <a href="https://www.strath.ac.uk/research/innovationinautism/">Laboratory for Innovation in Autism</a>, led by Prof Jonathan Delafield-Butt. Built on more than a decade of research and £3 million in funding, our algorithms were trained on data from over 1,200 children and validated in a multicentre Phase 3 study on autism identification across Scotland and Sweden, using previously unseen datasets. This high-quality, ethically sourced evidence base underpins the reliability of our results and distinguishes Evermind AI from competitors.</p>
+                    <p>The technology was developed in collaboration between the University of Strathclyde’s <a href="https://www.strath.ac.uk/research/innovationinautism/">Laboratory for Innovation in Autism</a> and international partners, led by Prof Jonathan Delafield-Butt. Built on more than a decade of research and £3 million in funding, our algorithms were trained on data from over 1,200 children and validated in a multicentre Phase 3 study on autism identification across Scotland and Sweden, using previously unseen datasets. This high-quality, ethically sourced evidence base underpins the reliability of our results and distinguishes Evermind AI from competitors.</p>
                     <ul class="actions stacked">
                         <li><a href="#impact" class="button large wide smooth-scroll-middle">Get involved</a></li>
                     </ul>
