--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                         <li><a href="mailto:info@evermindai.co?subject=Inquiry%20from%20Website" class="icon style2 fa-envelope"><span class="label">Email</span></a></li>
                     </ul>
                     <p>&copy; 2025 EverMind AI Ltd. All rights reserved.<br>
-                    Registered in Scotland No. SC847182. 40 George Street, Glasgow, UK, G1 1QE.<br>
+                    Registered in Scotland No. SC847182. 40-50 George Street, Glasgow, UK, G1 1QE.<br>
                     <a href="mailto:info@evermindai.co">info@evermindai.co</a></p>
                 </div>
             </footer>
